remove h1 add h3 and p

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <h1>Welcome to our home!</h1>
+    <h3>Tile</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, delectus.</p>
 </body>
 </html>
