--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         <li>Hello</li>
     </ul>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, delectus.</p>
+    <input type="text"> Name
 </body>
 </html>
